# llm-vn-lateshows25

./: README.md  devenv.nix
.github/workflows/: hardware-controller.yml  host-software.yml  icd.yml
cad/: assembly.scad  box.scad  dimensions.scad  lid.scad  lid_legend.scad  lid_main.scad
cad/lib/: button.scad  display.scad
hardware-controller/: Cargo.toml
hardware-controller/src/: buttons.rs  main.rs  rpc.rs
hardware-controller/src/display/: mod.rs
hardware-controller/src/display/screens/: character_select.rs  choice.rs  mod.rs  splash.rs
host-software/: Cargo.toml  README.md
host-software/extra/: characters.toml  llm-vn-host.service
host-software/src/: character.rs  controller.rs  conversation.rs  main.rs  printer.rs
icd/: Cargo.toml
icd/src/: lib.rs
ollama/: README.md  ember.Modelfile  glados.Modelfile  marisa.Modelfile  mia.Modelfile  update-models.sh  vi.Modelfile
