[package]
name = "llm-vn-controller"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
assign-resources = "0.4.1"
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
heapless = { version = "0.8.0", features = ["defmt-03"] }
icd = { path = "../icd" }
mipidsi = "0.9.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
peek-o-display-bsp = { git = "https://github.com/DanNixon/peek-o-display", features = ["rp2040"]}
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
postcard = { version = "1.1.1", features = ["defmt"] }
postcard-rpc = { version = "0.11.9", features = ["defmt", "embassy-usb-0_4-server"] }
postcard-schema = "0.2.1"
static_cell = "2.1.0"
tinybmp = "0.6.0"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
