[package]
name = "icd"
version = "0.1.0"
edition = "2021"

[features]
use-std = ["serde/std"]

[dependencies]
defmt = "1.0.1"
embedded-graphics = "0.8.1"
heapless = { version = "0.8.0", features = ["defmt-03", "serde"] }
postcard-rpc = "0.11"
postcard-schema = { version = "0.2.1", features = ["derive", "heapless-v0_8"] }
serde = { version = "1.0.219", features = ["derive"], default-features = false }

[lints.rust]
unused_crate_dependencies = "deny"
